feat(api): ma don {VP}{ddMM}{XXXX} — bo nam, duoi 4 ky tu it trung
Hậu tố base32 (không 0/O/1/I/L); check trùng cả mã đầy đủ và 4 ký tự cuối toàn hệ thống. Soft limit 1000 đơn/VP/ngày giữ nguyên.

Co-authored-by: Cursor <cursoragent@cursor.com>