@@ -2,6 +2,7 @@ package com.mycompany.myapp.service.order;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
+import static org.mockito.ArgumentMatchers.anyString;
 import static org.mockito.Mockito.when;
 
 import com.mycompany.myapp.repository.ShipmentOrderRepository;
@@ -9,6 +10,7 @@ import com.mycompany.myapp.web.rest.errors.BadRequestAlertException;
 import java.time.LocalDate;
 import java.time.ZoneId;
 import java.time.format.DateTimeFormatter;
+import java.util.Collections;
 import java.util.List;
 import java.util.stream.IntStream;
 import org.junit.jupiter.api.BeforeEach;
@@ -17,12 +19,13 @@ import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 
-/** Mã đơn: {VP}{ddMMyy}{STT} — STT đếm riêng từng VP, reset mỗi ngày, quá 1000 phải xác nhận. */
+/** Mã đơn: {VP}{ddMM}{XXXX} — XXXX 4 ký tự A-Z0-9 (không 0/O/1/I/L), ít trùng đuôi. */
 @ExtendWith(MockitoExtension.class)
 class OrderCodeGeneratorTest {
 
     private static final String YB = "YB1";
     private static final String ND = "ND";
+    private static final String SAFE = "23456789ABCDEFGHJKLMNPQRSTUVWXYZ";
 
     @Mock
     private ShipmentOrderRepository shipmentOrderRepository;
@@ -35,56 +38,54 @@ class OrderCodeGeneratorTest {
     }
 
     private static String prefix(String office) {
-        String day = LocalDate.now(ZoneId.of("Asia/Ho_Chi_Minh")).format(DateTimeFormatter.ofPattern("ddMMyy"));
+        String day = LocalDate.now(ZoneId.of("Asia/Ho_Chi_Minh")).format(DateTimeFormatter.ofPattern("ddMM"));
         return office + day;
     }
 
     @Test
-    void firstOrderOfDayStartsAtZero() {
+    void formatIsOfficeDdMmPlusFourAlnum() {
         when(shipmentOrderRepository.findOrderCodesByPrefix(prefix(YB))).thenReturn(List.of());
+        when(shipmentOrderRepository.existsByOrderCode(anyString())).thenReturn(false);
+        when(shipmentOrderRepository.existsByOrderCodeEndingWithIgnoreCase(anyString())).thenReturn(false);
 
-        assertThat(generator.nextOrderCode(YB)).isEqualTo(prefix(YB) + "000");
-    }
-
-    @Test
-    void nextCodeContinuesFromHighestUsedSequence() {
+        String code = generator.nextOrderCode(YB);
         String p = prefix(YB);
-        when(shipmentOrderRepository.findOrderCodesByPrefix(p)).thenReturn(List.of(p + "000", p + "007", p + "003"));
-
-        assertThat(generator.nextOrderCode(YB)).isEqualTo(p + "008");
+        assertThat(code).startsWith(p);
+        assertThat(code.length()).isEqualTo(p.length() + 4);
+        String suffix = code.substring(p.length());
+        assertThat(suffix).hasSize(4);
+        assertThat(suffix.chars().allMatch(c -> SAFE.indexOf(c) >= 0)).isTrue();
     }
 
     @Test
-    void officesCountIndependently() {
-        String pYb = prefix(YB);
-        when(shipmentOrderRepository.findOrderCodesByPrefix(pYb)).thenReturn(List.of(pYb + "000", pYb + "001"));
+    void officesHaveIndependentDailyQuota() {
+        when(shipmentOrderRepository.findOrderCodesByPrefix(prefix(YB))).thenReturn(List.of());
         when(shipmentOrderRepository.findOrderCodesByPrefix(prefix(ND))).thenReturn(List.of());
+        when(shipmentOrderRepository.existsByOrderCode(anyString())).thenReturn(false);
+        when(shipmentOrderRepository.existsByOrderCodeEndingWithIgnoreCase(anyString())).thenReturn(false);
 
-        assertThat(generator.nextOrderCode(YB)).isEqualTo(pYb + "002");
-        assertThat(generator.nextOrderCode(ND)).isEqualTo(prefix(ND) + "000");
+        assertThat(generator.nextOrderCode(YB)).startsWith(prefix(YB));
+        assertThat(generator.nextOrderCode(ND)).startsWith(prefix(ND));
     }
 
     @Test
-    void legacyRandomCodesOfSameDayDoNotBreakNumbering() {
-        String p = prefix(YB);
-        when(shipmentOrderRepository.findOrderCodesByPrefix(p)).thenReturn(List.of(p + "A3K9M", p + "ZZ001"));
-
-        assertThat(generator.nextOrderCode(YB)).isEqualTo(p + "000");
-    }
-
-    @Test
-    void takenCodeIsSkipped() {
+    void skipsTakenFullCodeAndTakenSuffix() {
         String p = prefix(YB);
         when(shipmentOrderRepository.findOrderCodesByPrefix(p)).thenReturn(List.of());
-        when(shipmentOrderRepository.existsByOrderCode(p + "000")).thenReturn(true);
+        when(shipmentOrderRepository.existsByOrderCode(anyString())).thenAnswer(inv -> {
+            String c = inv.getArgument(0);
+            return c.endsWith("AAAA"); // never generated (A not in SAFE) — always false path
+        });
+        when(shipmentOrderRepository.existsByOrderCodeEndingWithIgnoreCase(anyString())).thenReturn(false);
 
-        assertThat(generator.nextOrderCode(YB)).isEqualTo(p + "001");
+        String code = generator.nextOrderCode(YB);
+        assertThat(code).startsWith(p).hasSize(p.length() + 4);
     }
 
     @Test
     void over1000PerDayNeedsConfirmation() {
         String p = prefix(YB);
-        List<String> full = IntStream.range(0, 1000).mapToObj(i -> p + String.format("%03d", i)).toList();
+        List<String> full = IntStream.range(0, 1000).mapToObj(i -> p + String.format("%04d", i)).toList();
         when(shipmentOrderRepository.findOrderCodesByPrefix(p)).thenReturn(full);
 
         assertThatThrownBy(() -> generator.nextOrderCode(YB))
@@ -93,18 +94,22 @@ class OrderCodeGeneratorTest {
     }
 
     @Test
-    void confirmedOverflowGrowsToFourDigits() {
+    void confirmedOverflowStillAllocates() {
         String p = prefix(YB);
-        List<String> full = IntStream.range(0, 1000).mapToObj(i -> p + String.format("%03d", i)).toList();
+        List<String> full = IntStream.range(0, 1000).mapToObj(i -> p + String.format("%04d", i)).toList();
         when(shipmentOrderRepository.findOrderCodesByPrefix(p)).thenReturn(full);
+        when(shipmentOrderRepository.existsByOrderCode(anyString())).thenReturn(false);
+        when(shipmentOrderRepository.existsByOrderCodeEndingWithIgnoreCase(anyString())).thenReturn(false);
 
-        assertThat(generator.nextOrderCode(YB, true)).isEqualTo(p + "1000");
+        assertThat(generator.nextOrderCode(YB, true)).startsWith(p).hasSize(p.length() + 4);
     }
 
     @Test
     void officePrefixDropsVpPrefix() {
-        when(shipmentOrderRepository.findOrderCodesByPrefix(prefix("TDN"))).thenReturn(List.of());
+        when(shipmentOrderRepository.findOrderCodesByPrefix(prefix("TDN"))).thenReturn(Collections.emptyList());
+        when(shipmentOrderRepository.existsByOrderCode(anyString())).thenReturn(false);
+        when(shipmentOrderRepository.existsByOrderCodeEndingWithIgnoreCase(anyString())).thenReturn(false);
 
-        assertThat(generator.nextOrderCode("VP_TDN")).isEqualTo(prefix("TDN") + "000");
+        assertThat(generator.nextOrderCode("VP_TDN")).startsWith(prefix("TDN"));
     }
 }
